--- a/SnakeConsoleGame/SnakeConsoleGame/SnakeConsoleGame.csproj
+++ b/SnakeConsoleGame/SnakeConsoleGame/SnakeConsoleGame.csproj
@@ -5,4 +5,10 @@
     <TargetFramework>netcoreapp3.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Core\" />
+    <Folder Include="Enums\" />
+    <Folder Include="GameObjects\" />
+  </ItemGroup>
+
 </Project>
